fixed flexbox wrap bug safari

--- a/_assets/css/_sass/_layout.scss
+++ b/_assets/css/_sass/_layout.scss
@@ -44,7 +44,7 @@
     justify-content: space-between;
   }
   > div {
-    display: inline-block;
+    display: block;
     width: 100%;
     margin-bottom: calc-em(20px);
     @media (min-width: $bp-medium) {
